--- a/themes/replica/layout/_widget/gitalk.ejs
+++ b/themes/replica/layout/_widget/gitalk.ejs
@@ -1,14 +1,16 @@
 <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
 <script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script>
+<script src="/js/md5.min.js"></script>
 <div class='container' id="gitalk-container"></div>
 <script>
     var gitalk = new Gitalk({
-        clientID: '<%= config.gitalk.client_id %>',
-        clientSecret: '<%= config.gitalk.client_secret %>',
+        clientID: '<%= config.gitalk.ClientID %>',
+        clientSecret: '<%= config.gitalk.ClientSecret %>',
         repo: '<%= config.gitalk.repo %>',
         owner: '<%= config.gitalk.owner %>',
         admin: ['<%= config.gitalk.owner %>'],
         distractionFreeMode: true,
+        id: md5(location.pathname)
     })
     gitalk.render('gitalk-container')
 </script>
