时间先后顺序进行排序

--- a/themes/replica/layout/_partial/article.ejs
+++ b/themes/replica/layout/_partial/article.ejs
@@ -14,7 +14,8 @@ var article_edit = config.article_edit || {};
       <% }else{ %>
           <i class="fa fa-pencil-square-o"></i>
       <%  } %>
-      {{moment(<%= publishTimestamp %>).fromNow()}}
+      <!-- {{moment(<%= publishTimestamp %>).fromNow()}} -->
+      <%= page.updated.format('YYYY年MM月DD日 hh:mm:ss') %>
     </span>
   </h3>
 
